Fix alignment of search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,10 +8,12 @@ body, html {
 /* Fonts */
 .clr {
     background-color: #bd8564;
-    height: 3em;
+    height: 2em;
 }
 
 h1 {
+    padding-top: 2em;
+    border-top: 5rem;
     color:#084e0e;
 }
 
@@ -26,7 +28,7 @@ h3 {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: 100% 80%;
+    background-size: 100% 100%;
     background-color: rgb(165, 200, 240);
     border: 2px solid #080103;
 }
